--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet" />
     <meta charset="utf-8" />
-
+    <script
+      src="https://kit.fontawesome.com/6b163e390d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
