--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- bs5-toast library -->
+    <script src="bs5-toast.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="stylesheet"
